# data-engineering-with-rust

./: .gitignore  Cargo.toml  README.md  config.toml
openspec/changes/add-iceberg-support/: .openspec.yaml  design.md  proposal.md  tasks.md
src/: engines.rs  main.rs  polars_functions.rs  utils.rs
src/common/: config.rs  logging.rs
src/engines/: iceberg_writer.rs  polars_engine.rs
src/utils/: download_client.rs  logging.rs
