[package]
name = "data-engineering-with-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.50.0", features = ["lazy", "parquet"] }
polars-io = "0.50.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "chrono", "json"] }
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
anyhow = "1.0.99"
futures = "0.3.31"
regex = "1.11.2"

# Iceberg dependencies
iceberg = "0.8.0"
iceberg-catalog-sql = "0.8.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any"] }
arrow-array = "57"
arrow-schema = "57"
arrow-select = "57"
parquet = { version = "57", default-features = false, features = ["arrow"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }

# Polars <-> Arrow interop
df-interchange = { version = "0.2", features = ["polars_0_50", "arrow_57"] }
